# bril_compiler

./: .gitignore  README.md  setup.cfg
bril_compiler/: __init__.py  constant.py  ir.py  ir_builder.py  parser.py  program.py
bril_compiler/optimization/: compiler_pass.py  tdce.py
bril_compiler/optimization/local/: tdce.py
bril_compiler/optimization/redundancy/: lvn.py
bril_compiler/optimization/redundancy/numbering/: agent.py  base.py  extensions.py  table.py
bril_compiler/optimization/redundancy/value_numbering/: base.py  core.py  local_agent.py
bril_compiler/test/turnt/lvn/: clobber-arg.bril  clobber-fold.bril  clobber.bril  commute.bril  divide-by-zero.bril  fold-comparisons.bril  idchain-nonlocal.bril  idchain-prop.bril  logical-operators.bril  nonlocal-clobber.bril  nonlocal.bril  reassign.bril  redundant-dce-chain.bril  redundant-dce.bril  rename-fold.bril  rename-fold.out  turnt.toml
bril_compiler/test/turnt/tdce/: turnt.toml
