[metadata]
name = bril_compiler
version = 1.0
author = pingjuiliao
author_email = pingjuiliao@gmail.com
description = Application bril compiler
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
        Operating System :: OS Independent
# license_file = LICENSE.txt
